<resources>
    <string name="app_name">PopularMovies</string>
    <string name="query_top_rated">top_rated</string>
    <string name="query_popular">popular</string>

    <string name="YOUTUBE_BASE">"https://www.youtube.com/watch?v="</string>

    <string name="INFO_TITLE">TITLE  : </string>
    <string name="INFO_RATING">RATING : </string>
    <string name="INFO_DATERELEASE">DATE RELEASE : </string>
    <string name="INFO_DESCRIPTION">OVERVIEW : </string>
    <string name="INFO_POSTERLINK">POSTERLINK</string>
    <string name="INFO_TRAILERS">TRAILERS :</string>
    <string name="INFO_REVIEWS">REVIEWS :</string>
    <string name="query_favorite">Favorite</string>
    <string name="add_to_favorite">mark as\nfavorite</string>
    <string name="remove_from_favorite">remove from\nfavorite</string>

</resources>
